<resources>
    <string name="app_name">MyLauncher</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="button">Launch</string>

    <string name="app_description">Made by Roskach Roman</string>

    <!-- Actions -->
    <string name="action_next">Next</string>
    <string name="action_finish">Finish</string>

    <string name="four_by_six">Four by six</string>
    <string name="five_by_seven">Five by seven</string>

    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>

    <string name="launcher_settings">Launcher settings</string>
    <string name="theme_settings">Theme settings</string>

    <string name="app_description_first_title">Simplicity</string>
    <string name="app_description_first_info">Delete apps in two clicks. Keep your favourite apps nearby.</string>
    <string name="app_description_second_title">Customization</string>
    <string name="app_description_second_info">Change amount of icons and color scheme at any time</string>

    <string name="popular_apps">Popular</string>
    <string name="new_apps">New</string>
    <string name="all_apps">All</string>
    <string name="favourite_apps">Favourite</string>

    <!-- Preference -->
    <string name="action_settings">Settings</string>

    <string name="pref_show_true">Shown</string>
    <string name="pref_show_false">Hidden</string>

    <string name="pref_category_main_settings_title">Main Settings</string>

    <string name="pref_icon_amount_key" translatable="false">icon_amount</string>
    <string name="pref_theme_key" translatable="false">theme</string>

    <string name="pref_icon_amount_label">Icon amount</string>
    <string name="pref_theme_label">Theme</string>

    <!--icons-->
    <string name="pref_icons_show_small_label">Four</string>
    <string name="pref_icons_show_big_label">Five</string>

    <string name="pref_icons_show_small_value" translatable="false">four</string>
    <string name="pref_icons_show_big_value" translatable="false">five</string>

    <!--theme-->
    <string name="pref_theme_light_label">Light</string>
    <string name="pref_theme_dark_label">Dark</string>

    <string name="pref_theme_light_value" translatable="false">light</string>
    <string name="pref_theme_dark_value" translatable="false">dark</string>

    <!--favourite-->
    <string name="pref_category_favourite_settings_title">Favourite Settings</string>

    <string name="pref_favourite_show_label">Show Favourite Screen</string>
    <string name="pref_favourite_show_key" translatable="false">show_favourite</string>

    <string name="pref_favourite_clear_title">Clear Favourite Screen</string>
    <string name="pref_favourite_clear_key" translatable="false">clear_favourite</string>

    <!--uri-->
    <string name="pref_category_uri_settings_title">User Uri Settings</string>

    <string name="pref_uri_amount_default">10</string>

    <string name="pref_uri_amount_label">Uri Amount History</string>
    <string name="pref_uri_amount_key" translatable="false">uriamount</string>

    <string name="pref_uri_clear_title">Clear URI History</string>
    <string name="pref_uri_clear_key" translatable="false">clear_uri</string>

</resources>
