<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pc.ui1.WelcomeSettingsFragment">

    <TextView
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_settings"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="34sp"
        />
    <TextView
        style="@style/AppTheme"
        android:layout_margin="20dp"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launcher_settings"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:checkedButton="@+id/four_by_six">
        <RadioButton
            android:id="@+id/four_by_six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four_by_six"
            />
        <RadioButton
            android:id="@+id/five_by_seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five_by_seven"
            />
    </RadioGroup>
    <TextView
        style="@style/AppTheme"
        android:layout_margin="20dp"
        android:textSize="21sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theme_settings"
        />
    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:checkedButton="@+id/light_theme">
        <RadioButton android:id="@+id/light_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_theme"
            />
        <RadioButton android:id="@+id/dark_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            />
    </RadioGroup>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
</ScrollView>
